Fix vertical align order items

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,3 +40,7 @@
     vertical-align: middle;
     font-size: 1.2rem;
 }
+
+.panel.order-info .table.product-list  td {
+    vertical-align: middle;
+}
